2006-02-15  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmconfig.c: Use g_hash_table_replace instead of freeing
	  the string value in the hash.  This corrects a core dumping
	  problem with gdmsetup.

2006-02-15  Brian Cameron  <brian.cameron@sun.com>

	* Makefile.am, gui/Makefile.am, gui/greeter/Makefile.am, 
	  utils/gdm-dmx-reconnect-proxy.c: Reorganize libraries so that
	  it is easier to build GDM against a test Xserver.  Fixes bug
	  #331226.  Patch provided by Sylvain Bertrand
	  <sylvain.bertrand@gmail.com>.
	* daemon/slave.c: Remove some cruft accidently added.

2006-02-15  Brian Cameron  <brian.cameron@sun.com>

	* config/Xsession.in: Now start dbus-launch in GDM's Xsession
	  script if dbus-launch is available on the system.  Fixes
	  bug #331104.  Patch provided by delgarde@ihug.co.nz.

2006-02-13  Brian Cameron  <brian.cameron@sun.com>

	* Makefile.am: Distribute the README file.

2006-02-13  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.13.0.8: 
	* NEWS: Updated.
	* configure.ac: Update to 2.13.0.8 and use EXPANDED_DATADIR instead
	  of %{datadir} since that makes it work much better.
	* README.install, README, docs/C/gdm.xml:  Update docs so that the
	  change from --with-configdir to --with-defaults-conf and renaming of
	  default and custom config file is documented.
	* daemon/gdm-net.c, daemon/gdmconfig.c, gui/gdmsetup.c: Update comments
	  to no longer mention old name of config file.  Fix gdmsetup to know
	  new location of custom config file.
	* config/Makefile.am: Now if upgrading and gdm.conf and
	  factory-gdm.conf are different, move the gdm.conf file to
	  custom.conf instead of copy.  This is  because we don't want GDM
	  to overwrite the custom.conf file every time user upgrades.  Only
	  first time, then gdm.conf should go away.

2006-02-13  Brian Cameron  <brian.cameron@sun.com>

	* acconfig.h, configure.ac, daemon/Makefile.am, daemon/gdmconfig.c,
	  docs/C/gdm.xml: Change --with-configdir to --with-defaults-conf