@@ -3,6 +3,8 @@
 	* gui/gdmconfig.c: Use g_hash_table_replace instead of freeing
 	  the string value in the hash.  This corrects a core dumping
 	  problem with gdmsetup.
+	* gui/gdmsetup.c: Fix issue with gdmsetup freeing theme_dir
+	  when it shouldn't.
 
 2006-02-15  Brian Cameron  <brian.cameron@sun.com>
 
